--- a/MusicPlayer/app/src/main/res/layout/content_main.xml
+++ b/MusicPlayer/app/src/main/res/layout/content_main.xml
@@ -12,8 +12,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.user1.musicplayer.MainActivity"
     tools:showIn="@layout/activity_main"
-    android:background="#007080">
-
+    android:background="#FFdCa3">
+<!-- android:background="#007080" -->
 
     <Button
         android:layout_width="49dp"
