--- a/MusicPlayer/app/src/main/res/layout/content_main.xml
+++ b/MusicPlayer/app/src/main/res/layout/content_main.xml
@@ -23,10 +23,13 @@
         android:layout_marginStart="99dp"
         android:layout_marginLeft="99dp"/>
 
-    <Button
+    <ImageButton
         android:layout_width="49dp"
         android:layout_height="49dp"
-        android:background="@drawable/ic_play_arrow_black_24dp"
+        android:src="@drawable/ic_play_arrow_black_24dp"
+        android:scaleX="2"
+        android:scaleY="2"
+        android:background="#EFECD3"
         android:id="@+id/playPause"
         android:layout_toRightOf="@id/skipPrev"
         android:layout_toEndOf="@id/skipPrev"/>
@@ -60,6 +63,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/bar"
         android:verticalSpacing="10dp"/>
+
 
 
 </RelativeLayout>
