--- a/MusicPlayer/app/src/main/res/layout/notification_layout.xml
+++ b/MusicPlayer/app/src/main/res/layout/notification_layout.xml
@@ -3,4 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:layout_width="90dp"
+        android:layout_height="60dp"
+        android:src="@drawable/ic_stop_black_24dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:id="@+id/notiStop"
+        />
+
 </LinearLayout>
