--- a/MusicPlayer/app/src/main/res/layout/content_main.xml
+++ b/MusicPlayer/app/src/main/res/layout/content_main.xml
@@ -12,9 +12,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.user1.musicplayer.MainActivity"
     tools:showIn="@layout/activity_main"
-    android:background="#EFECD3">
-<!-- android:background="#007080" -->
-
+    android:background="#88AACC">
+<!--android:background="#EFECD3"-->
     <Button
         android:layout_width="49dp"
         android:layout_height="49dp"
@@ -29,7 +28,7 @@
         android:src="@drawable/ic_play_arrow_black_24dp"
         android:scaleX="2"
         android:scaleY="2"
-        android:background="#EFECD3"
+        android:background="#88AACC"
         android:id="@+id/playPause"
         android:layout_toRightOf="@id/skipPrev"
         android:layout_toEndOf="@id/skipPrev"/>
